objects/QueueAssignment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Account, Partner-Parent Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>QueueAssignments</relationshipLabel>
        <relationshipName>QueueAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Reason__c</fullName>
        <description>Reason of assignment to this field</description>
        <label>Assignment Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Summary__c</fullName>
        <label>BU Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_User_Availability__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check User Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_User_Found__c</fullName>
        <label>No User Found</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature</label>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipLabel>QueueAssignments</relationshipLabel>
        <relationshipName>QueueAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipLabel>QueueAssignments</relationshipLabel>
        <relationshipName>QueueAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Center__c</fullName>
        <label>Support Center</label>
        <picklist>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>QueueAssignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assignment_Reason__c</columns>
        <columns>Check_User_Availability__c</columns>
        <columns>No_User_Found__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Feature__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>QueueAssignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QueueAssignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>